--- a/client/conf/conf.d/default.conf
+++ b/client/conf/conf.d/default.conf
@@ -1,5 +1,12 @@
 server {
   listen 80;
+
+  
+  if ($http_x_forwarded_proto != 'https') {
+       return 301 https://$host$request_uri;
+   } 
+  server_name  herelisten.com  www.herelisten.com;
+
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
@@ -9,4 +16,5 @@ server {
   location = /50x.html {
     root   /usr/share/nginx/html;
   }
+  
 }
