--- a/client/conf/conf.d/default.conf
+++ b/client/conf/conf.d/default.conf
@@ -2,10 +2,10 @@ server {
   listen 80;
 
   
-  if ($http_x_forwarded_proto != 'https') {
-       return 301 https://$host$request_uri;
-   } 
-  server_name  herelisten.com  www.herelisten.com;
+  # if ($http_x_forwarded_proto != 'https') {
+  #      return 301 https://$host$request_uri;
+  #  } 
+  # server_name  herelisten.com  www.herelisten.com;
 
   location / {
     root   /usr/share/nginx/html;
