--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,11 +19,11 @@ phases:
         fi
       - echo "Docker tag:" $DOCKER_TAG
       - aws s3 cp s3://docker-token/.docker.key .docker.key
-      - docker login -u reactnode32 --password-stdin < .docker.key
+      - docker login -u $DOCKER_USERNAME --password-stdin < .docker.key
       - rm .docker.key
-      - docker pull reactnode32/here-listen-users:$DOCKER_TAG || true
-      - docker pull reactnode32/here-listen-client:builder || true
-      - docker pull reactnode32/here-listen-client:$DOCKER_TAG || true
+      - docker pull $DOCKER_USERNAME/here-listen-users:$DOCKER_TAG || true
+      - docker pull $DOCKER_USERNAME/here-listen-client:builder || true
+      - docker pull $DOCKER_USERNAME/here-listen-client:$DOCKER_TAG || true
   build:
     commands:
       - echo building images
@@ -34,32 +34,32 @@ phases:
       - echo Preparing to build Production! with DockerFile
       - >
         docker build \
-          --cache-from reactnode32/here-listen-users:$DOCKER_TAG \
+          --cache-from $DOCKER_USERNAME/here-listen-users:$DOCKER_TAG \
           -f users/Dockerfile \
-          -t reactnode32/here-listen-users:$DOCKER_TAG \
+          -t $DOCKER_USERNAME/here-listen-users:$DOCKER_TAG \
           ./users
       - >
         docker build \
           --target builder \
-          --cache-from reactnode32/here-listen-client:builder \
+          --cache-from $DOCKER_USERNAME/here-listen-client:builder \
           -f client/Dockerfile \
-          -t reactnode32/here-listen-client:builder \
+          -t $DOCKER_USERNAME/here-listen-client:builder \
           --build-arg NODE_ENV=production \
           --build-arg REACT_APP_USERS_SERVICE_URL=$REACT_APP_USERS_SERVICE_URL \
           --build-arg REACT_APP_SECRETME=$REACT_APP_SECRETME \
           ./client
       - >
         docker build \
-          --cache-from reactnode32/here-listen-client:$DOCKER_TAG \
+          --cache-from $DOCKER_USERNAME/here-listen-client:$DOCKER_TAG \
           -f client/Dockerfile \
-          -t reactnode32/here-listen-client:$DOCKER_TAG \
+          -t $DOCKER_USERNAME/here-listen-client:$DOCKER_TAG \
           --build-arg REACT_APP_SECRETME=$REACT_APP_SECRETME \
           ./client
   post_build:
     commands:
       - echo pushing prod images to ecr..
-      - docker push reactnode32/here-listen-users:$DOCKER_TAG
-      - docker push reactnode32/here-listen-client:builder
-      - docker push reactnode32/here-listen-client:$DOCKER_TAG
+      - docker push $DOCKER_USERNAME/here-listen-users:$DOCKER_TAG
+      - docker push $DOCKER_USERNAME/here-listen-client:builder
+      - docker push $DOCKER_USERNAME/here-listen-client:$DOCKER_TAG
       - chmod +x ./deploy.sh
       - bash deploy.sh
