--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -2,11 +2,11 @@ version: "3.7"
 services:
   users:
     build:
-      context: ../users/
+      context: ./users
       dockerfile: Dockerfile.dev
     command: ["/wait-for-it.sh", "users-db:3307", "--", "npm", "start"]
     volumes:
-      - "../users:/usr/src/app"
+      - "./users:/usr/src/app"
     ports:
       - 5001:5000
     environment:
@@ -22,13 +22,10 @@ services:
 
   users-db:
     build:
-      context: ../users/database
+      context: ./users/database
       dockerfile: Dockerfile
     environment:
-      # MYSQL_DATABASE: users_prod
       MYSQL_ROOT_PASSWORD: password
-      # MYSQL_USER: root
-      # MYSQL_PASSWORD: password
       DATABASE_HOST: users-db #change this to users-db
     ports:
       - "3307:3306"
@@ -37,16 +34,15 @@ services:
 
   client:
     build:
-      context: ../client
-      dockerfile: Dockerfile.prod
+      context: ./client
+      dockerfile: Dockerfile.dev
     volumes:
-      - "../client:/usr/src/app"
+      - "./client:/usr/src/app"
       - "/usr/src/app/node_modules"
     ports:
       - 3007:3000
     environment:
       - NODE_ENV=development
-      - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
     depends_on:
       - users
 volumes:
