--- a/client/Dockerfile.prod
+++ b/client/Dockerfile.prod
@@ -12,7 +12,7 @@ ENV PATH /usr/src/app/node_modules/.bin:$PATH
 # install and cache app dependencies
 COPY package.json /usr/src/app/package.json
 COPY package-lock.json /usr/src/app/package-lock.json
-COPY .env /usr/src/app/.env
+# COPY .env /usr/src/app/.env
 
 
 RUN npm ci
