package.json and .env file usage in readme

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -15,7 +15,7 @@ services:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_USER: root
       MYSQL_PASSWORD: password
-      DATABASE_HOST: users-db #change this to users-db because it links to the other db container
+      DATABASE_HOST: users-db #change this to users-db because it links to the other db container within docker
     depends_on:
       - users-db
     restart: on-failure:5
